**BUG WITH IMAGE UPLOAD TEXT DIALOG** Added Picasso image handling

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -5,16 +5,27 @@
   android:id="@+id/nav_graph"
   app:startDestination="@id/FirstFragment">
 
-  <fragment
-    android:id="@+id/FirstFragment"
-    android:label="@string/first_fragment_label"
-    android:name="edu.cnm.deepdive.deepdivegallery.controller.FirstFragment"
-    tools:layout="@layout/fragment_first">
+  <action
+    android:id="@+id/open_upload_properties"
+    app:destination="@+id/upload_properties_fragment">
 
-    <action
-      android:id="@+id/action_FirstFragment_to_SecondFragment"
-      app:destination="@id/SecondFragment"/>
-  </fragment>
+    <argument
+      android:name="content_uri"
+      app:argType="android.net.Uri"/>
+
+  </action>
+
+  <dialog
+    android:id="@+id/upload_properties_fragment"
+    android:name="edu.cnm.deepdive.deepdivegallery.controller.UploadPropertiesFragment"
+    tools:layout="@layout/fragment_upload_properties">
+
+    <argument
+      android:name="content_uri"
+      app:argType="android.net.Uri"/>
+
+  </dialog>
+
   <fragment
     android:id="@+id/SecondFragment"
     android:label="@string/second_fragment_label"
@@ -25,4 +36,17 @@
       android:id="@+id/action_SecondFragment_to_FirstFragment"
       app:destination="@id/FirstFragment"/>
   </fragment>
+
+  <fragment
+    android:id="@+id/FirstFragment"
+    android:label="@string/first_fragment_label"
+    android:name="edu.cnm.deepdive.deepdivegallery.controller.FirstFragment"
+    tools:layout="@layout/fragment_first">
+
+    <action
+      android:id="@+id/action_FirstFragment_to_SecondFragment"
+      app:destination="@id/SecondFragment"/>
+  </fragment>
+
+
 </navigation>
