**BUG WITH IMAGE UPLOAD TEXT DIALOG** Finished Image upload

--- a/app/src/main/res/layout/fragment_upload_properties.xml
+++ b/app/src/main/res/layout/fragment_upload_properties.xml
@@ -21,6 +21,7 @@
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintWidth_percent=".6"
     android:layout_margin="8dp"
     tools:ignore="ContentDescription"/>
 
