--- a/app/src/main/res/layout/fragment_upload_properties.xml
+++ b/app/src/main/res/layout/fragment_upload_properties.xml
@@ -22,14 +22,14 @@
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintWidth_percent=".6"
-    android:layout_margin="8dp"
+    android:layout_margin="@dimen/static_spacing"
     tools:ignore="ContentDescription"/>
 
   <com.google.android.material.textfield.TextInputLayout
     android:id="@+id/title_layout"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
+    android:layout_margin="@dimen/static_spacing"
     app:hintEnabled="true"
     app:hintAnimationEnabled="true"
     app:layout_constraintTop_toBottomOf="@id/image"
@@ -40,7 +40,7 @@
       android:id="@+id/title"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:hint="Title of Image"
+      android:hint="@string/title_of_image_hint"
       android:inputType="text"/>
 
   </com.google.android.material.textfield.TextInputLayout>
@@ -49,7 +49,7 @@
     android:id="@+id/description_layout"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
+    android:layout_margin="@dimen/static_spacing"
     app:hintEnabled="true"
     app:hintAnimationEnabled="true"
     app:layout_constraintTop_toBottomOf="@id/title_layout"
@@ -60,7 +60,7 @@
       android:id="@+id/description"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:hint="Description of Image"
+      android:hint="@string/description_of_image_hint"
       android:inputType="textMultiLine"
       android:minLines="3"
       android:maxLines="3"/>
