--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,16 +1,8 @@
 <resources>
   <dimen name="fab_margin">16dp</dimen>
-  <!--
-    Because the window insets on round devices are larger than 15dp, this padding only applies
-    to square screens.
-    -->
   <dimen name="box_inset_layout_padding">0dp</dimen>
-  <dimen name="half_standard_spacing">5dp</dimen>
-
-  <!--
-    This padding applies to both square and round screens. The total padding between the buttons
-    and the window insets is box_inset_layout_padding (above variable) on square screens and
-    inner_frame_layout_padding (below variable) on round screens.
-    -->
+  <dimen name="half_static_spacing">4dp</dimen>
+  <dimen name="static_spacing">8dp</dimen>
+  <dimen name="double_static_spacing">16dp</dimen>
   <dimen name="inner_frame_layout_padding">5dp</dimen>
 </resources>
