--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
   <dimen name="static_spacing">8dp</dimen>
   <dimen name="double_static_spacing">16dp</dimen>
   <dimen name="inner_frame_layout_padding">5dp</dimen>
+  <dimen name="gallery_item_width">160dp</dimen>
 </resources>
