--- a/app/src/main/res/layout/item_gallery.xml
+++ b/app/src/main/res/layout/item_gallery.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat
   xmlns:android="http://schemas.android.com/apk/res/android"
+  android:orientation="vertical"
+  android:gravity="center"
   android:layout_width="match_parent"
-  android:layout_height="match_parent"
+  android:layout_height="wrap_content"
   xmlns:tools="http://schemas.android.com/tools">
 
   <ImageView
     android:id="@+id/image"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:scaleType="fitCenter"
-    android:layout_marginTop="@dimen/static_spacing"
+    android:layout_marginTop="@dimen/half_static_spacing"
+    android:layout_margin="@dimen/half_static_spacing"
     android:adjustViewBounds="true"
     tools:ignore="contentDescription"/>
 
