--- a/app/src/main/res/layout/item_gallery.xml
+++ b/app/src/main/res/layout/item_gallery.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat
+<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
   android:gravity="center"
@@ -15,7 +15,8 @@
     android:layout_marginTop="@dimen/half_static_spacing"
     android:layout_margin="@dimen/half_static_spacing"
     android:adjustViewBounds="true"
-    tools:ignore="contentDescription"/>
+    tools:ignore="contentDescription"
+    />
 
   <TextView
     android:id="@+id/title"
@@ -29,4 +30,4 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="@dimen/static_spacing"/>
 
-</androidx.appcompat.widget.LinearLayoutCompat>
+</LinearLayout>
