--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,6 +12,19 @@
     <item name="windowNoTitle">true</item>
   </style>
 
+  <style name="TitleText" parent="AppTheme">
+    <item name="android:textSize">20sp</item>
+    <item name="android:textStyle">normal</item>
+    <item name="android:textColor">@android:color/black</item>
+    <item name="android:layout_marginTop">@dimen/half_static_spacing</item>
+  </style>
+
+  <style name="DescriptionText" parent="AppTheme">
+    <item name="android:textSize">15sp</item>
+    <item name="android:textStyle">bold</item>
+    <item name="android:textColor">@android:color/black</item>
+  </style>
+
   <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
   <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
