finished displaying galleries

--- a/app/src/main/res/layout/item_gallery.xml
+++ b/app/src/main/res/layout/item_gallery.xml
@@ -17,7 +17,7 @@
     android:layout_marginTop="@dimen/half_static_spacing"
     android:layout_margin="@dimen/half_static_spacing"
     app:layout_constraintHorizontal_weight="1"
-    android:src="@mipmap/ic_gallery"
+    android:src="@mipmap/ic_gallery_foreground"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintEnd_toStartOf="@id/gallery_title"
