--- a/app/src/main/res/layout/fragment_upload_properties.xml
+++ b/app/src/main/res/layout/fragment_upload_properties.xml
@@ -12,61 +12,83 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-  <ImageView
-    android:id="@+id/image"
-    android:layout_width="0dp"
-    android:layout_height="wrap_content"
-    android:scaleType="fitCenter"
-    android:adjustViewBounds="true"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintWidth_percent=".6"
-    android:layout_margin="@dimen/static_spacing"
-    tools:ignore="ContentDescription"/>
-
-  <com.google.android.material.textfield.TextInputLayout
-    android:id="@+id/title_layout"
-    android:layout_width="0dp"
-    android:layout_height="wrap_content"
-    android:layout_margin="@dimen/static_spacing"
-    app:hintEnabled="true"
-    app:hintAnimationEnabled="true"
-    app:layout_constraintTop_toBottomOf="@id/image"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent">
-
-    <com.google.android.material.textfield.TextInputEditText
-      android:id="@+id/gallery_title"
-      android:layout_width="match_parent"
+    <ImageView
+      android:id="@+id/image"
+      android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:hint="@string/title_of_image_hint"
-      android:inputType="text"/>
+      android:scaleType="fitCenter"
+      android:adjustViewBounds="true"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintWidth_percent=".6"
+      android:layout_margin="@dimen/static_spacing"
+      tools:ignore="ContentDescription"/>
 
-  </com.google.android.material.textfield.TextInputLayout>
-
-  <com.google.android.material.textfield.TextInputLayout
-    android:id="@+id/description_layout"
-    android:layout_width="0dp"
-    android:layout_height="wrap_content"
-    android:layout_margin="@dimen/static_spacing"
-    app:hintEnabled="true"
-    app:hintAnimationEnabled="true"
-    app:layout_constraintTop_toBottomOf="@id/title_layout"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent">
-
-    <com.google.android.material.textfield.TextInputEditText
-      android:id="@+id/gallery_description"
-      android:layout_width="match_parent"
+    <com.google.android.material.textfield.TextInputLayout
+      android:id="@+id/title_layout"
+      android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:hint="@string/description_of_image_hint"
-      android:inputType="textMultiLine"
-      android:minLines="3"
-      android:maxLines="3"/>
+      android:layout_margin="@dimen/static_spacing"
+      app:hintEnabled="true"
+      app:hintAnimationEnabled="true"
+      app:layout_constraintTop_toBottomOf="@id/image"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintEnd_toEndOf="parent">
 
-  </com.google.android.material.textfield.TextInputLayout>
+      <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/image_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/title_of_image_hint"
+        android:inputType="text"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+      android:id="@+id/description_layout"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_margin="@dimen/static_spacing"
+      app:hintEnabled="true"
+      app:hintAnimationEnabled="true"
+      app:layout_constraintTop_toBottomOf="@id/title_layout"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintEnd_toEndOf="parent">
+
+      <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/gallery_description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/description_of_image_hint"
+        android:inputType="textMultiLine"
+        android:minLines="3"
+        android:maxLines="3"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+      android:id="@+id/gallery_title_layout"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_margin="@dimen/static_spacing"
+      app:hintEnabled="true"
+      app:hintAnimationEnabled="true"
+      app:layout_constraintTop_toBottomOf="@id/description_layout"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintEnd_toEndOf="parent">
+
+      <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/gallery_title_description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/gallery_hint"
+        android:inputType="text"
+        android:minLines="3"
+        android:maxLines="3"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
-  </ScrollView>
+  </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
