added auto fill for gallery

--- a/app/src/main/res/layout/item_image.xml
+++ b/app/src/main/res/layout/item_image.xml
@@ -9,13 +9,13 @@
 
   <ImageView
     android:id="@+id/image_in_gallery"
-    android:layout_width="match_parent"
+    android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:scaleType="fitCenter"
     android:adjustViewBounds="true"
+    app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toStartOf="@id/image_title"
-    app:layout_constraintTop_toTopOf="parent"/>
+    app:layout_constraintEnd_toStartOf="@id/image_title"/>
 
   <TextView
     android:id="@+id/image_title"
