--- a/app/src/main/res/layout/fragment_upload_properties.xml
+++ b/app/src/main/res/layout/fragment_upload_properties.xml
@@ -26,13 +26,35 @@
       tools:ignore="ContentDescription"/>
 
     <com.google.android.material.textfield.TextInputLayout
-      android:id="@+id/title_layout"
+      android:id="@+id/gallery_title_layout"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_margin="@dimen/static_spacing"
       app:hintEnabled="true"
       app:hintAnimationEnabled="true"
       app:layout_constraintTop_toBottomOf="@id/image"
+      app:layout_constraintBottom_toTopOf="@id/title_layout"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintEnd_toEndOf="parent">
+
+      <com.google.android.material.textfield.MaterialAutoCompleteTextView
+        android:id="@+id/gallery_title_description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/gallery_hint"
+        android:inputType="textAutoComplete"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+      android:id="@+id/title_layout"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_margin="@dimen/static_spacing"
+      app:hintEnabled="true"
+      app:hintAnimationEnabled="true"
+      app:layout_constraintTop_toBottomOf="@id/gallery_title_layout"
+      app:layout_constraintBottom_toTopOf="@id/description_layout"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent">
 
@@ -67,28 +89,6 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-      android:id="@+id/gallery_title_layout"
-      android:layout_width="0dp"
-      android:layout_height="wrap_content"
-      android:layout_margin="@dimen/static_spacing"
-      app:hintEnabled="true"
-      app:hintAnimationEnabled="true"
-      app:layout_constraintTop_toBottomOf="@id/description_layout"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintEnd_toEndOf="parent">
-
-      <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/gallery_title_description"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/gallery_hint"
-        android:inputType="text"
-        android:minLines="3"
-        android:maxLines="3"/>
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-
   </androidx.constraintlayout.widget.ConstraintLayout>
+
 </ScrollView>
