--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,6 +25,12 @@
     <item name="android:textColor">@android:color/black</item>
   </style>
 
+  <style name="ImageAttribut" parent="AppTheme">
+    <item name="android:layout_margin">@dimen/half_static_spacing</item>
+    <item name="android:textColor">@android:color/black</item>
+    <item name="android:textSize">15sp</item>
+  </style>
+
   <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
   <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
