--- a/app/src/main/res/layout/fragment_image_dialog.xml
+++ b/app/src/main/res/layout/fragment_image_dialog.xml
@@ -13,7 +13,7 @@
 
     <ImageView
       android:id="@+id/image_detail"
-      android:layout_width="0dp"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:adjustViewBounds="true"
       android:contentDescription="@string/gallery_image"
